<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInformationActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <fragment
                android:id="@+id/head_fragment"
                android:name="com.gaoxianglong.maque.HeadFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar3"
                style="@style/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="20dp"
                android:background="@color/colorTransparent"
                app:title=" ">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:onClick="back"
                        android:src="@drawable/ic_back" />

                    <Button
                        android:id="@+id/et_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorTransparent"
                        android:onClick="editTextButton"
                        android:text="@string/i_et_btn" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </RelativeLayout>


        <com.gaoxianglong.maque.views.ChangedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_sex"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/i_sex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible" />

                        <RadioGroup
                            android:id="@+id/i_radiogroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <RadioButton
                                android:id="@+id/et_i_radioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_marginRight="20dp"
                                android:background="@drawable/bj_et"
                                android:paddingRight="4dp"
                                android:text="男" />

                            <RadioButton
                                android:id="@+id/et_i_radioButton2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginLeft="20dp"
                                android:background="@drawable/bj_et"
                                android:paddingRight="4dp"
                                android:text="女" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_qq"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/i_qq"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/et_i_qq"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:inputType="number"
                            android:maxLength="10"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_birthday"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/i_birthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/et_i_birthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLength="20"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_remarks"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/i_remarks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/et_i_remarks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLength="10"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_describe"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/i_describe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minLines="4"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/et_i_describe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:minLines="3"
                            android:padding="4dp"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/call_record_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </com.gaoxianglong.maque.views.ChangedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.drawerlayout.widget.DrawerLayout>